# zephyr

samples/basic/blinky/: CMakeLists.txt  prj.conf
samples/basic/blinky/src/: main.c
